--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,3 +154,35 @@ nav .create {
     align-items: center;
     gap: 2rem;
 }
+
+/* ====================================== MAIN ====================================== */
+/* ====================================== MAIN ====================================== */
+main {
+    position: relative;
+    top: 5.4rem;
+}
+
+main .container {
+    display: grid;
+    grid-template-columns: 18vw auto 20vw;
+    column-gap: 2rem;
+    position: relative;
+}
+
+/* ====================================== LEFT ====================================== */
+/* ====================================== LEFT ====================================== */
+main .container .left {
+    height: max-content;
+    position: sticky;
+    top: var(--sticky-top-left);
+}
+
+main .container .left .profile {
+    padding: var(--card-padding);
+    background: var(--color-white);
+    border-radius: var(--card-border-radius);
+    display: flex;
+    align-items: center;
+    column-gap: 1rem;
+    width: 100%;
+}
