--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -374,3 +374,32 @@ main .container .left .profile {
     align-self: flex-start;
     border: 3px solid var(--color-primary);
 }
+
+/* ====================================== CREATE POST ====================================== */
+/* ====================================== CREATE POST ====================================== */
+.middle .create-post {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 1rem;
+    background: var(--color-white);
+    padding: 0.4rem var(--card-padding);
+    border-radius: var(--border-radius);
+}
+
+.middle .create-post input[type="text"] {
+    justify-self: start;
+    width: 100%;
+    padding-left: 1rem;
+    background: transparent;
+    color: var(--color-dark);
+    margin-right: 1rem;
+}
+
+.middle .create-post span i {
+    font-size: 1.5rem;
+    color: var(--color-primary);
+    cursor: pointer;
+    margin: 0 1rem;
+}
