add a style to post moadl and the card

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -632,6 +632,33 @@ main .container .right {
     }
 }
 
+/* ====================================== POST MODAL ====================================== */
+/* ====================================== POST MODAL ====================================== */
+/* ====================================== POST MODAL ====================================== */
+/* ====================================== POST MODAL ====================================== */
+.post-modal {
+    background: rgba(255, 255, 255, 0.5);
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    text-align: center;
+    display: grid;
+    place-items: center;
+    font-size: 0.9rem;
+    /* display: none; */
+}
+
+.post-modal .card {
+    background: var(--color-white);
+    padding: 3rem;
+    border-radius: var(--card-border-radius);
+    width: 50%;
+    box-shadow: 0 0 1rem var(--color-primary);
+}
+
 /* ====================================== MEDIA QUERIES FOR SMALL TABLETS AND MOBILE PHONES ====================================== */
 /* ====================================== MEDIA QUERIES FOR SMALL TABLETS AND MOBILE PHONES ====================================== */
 @media screen and (max-width: 992px) {
