--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -659,6 +659,43 @@ main .container .right {
     box-shadow: 0 0 1rem var(--color-primary);
 }
 
+/* ====================================== CREATE POST ====================================== */
+.post-modal .create-post {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 1rem;
+    background: var(--color-white);
+    padding: 0.4rem var(--card-padding);
+    border-radius: var(--border-radius);
+}
+
+.post-modal .create-post input[type="text"] {
+    justify-self: start;
+    width: 100%;
+    padding-left: 1rem;
+    background: transparent;
+    color: var(--color-dark);
+    margin-right: 1rem;
+}
+
+.post-modal .image-upload {
+    width: 100%;
+    border: 1px solid var(--color-light);
+    padding: 5rem;
+    border-radius: 10px;
+    margin: 1.5rem 1rem;
+    cursor: pointer;
+}
+
+.post-modal .image-upload span i {
+    font-size: 3.5rem;
+    color: var(--color-primary);
+    cursor: pointer;
+    /* margin: 0 1rem; */
+}
+
 /* ====================================== MEDIA QUERIES FOR SMALL TABLETS AND MOBILE PHONES ====================================== */
 /* ====================================== MEDIA QUERIES FOR SMALL TABLETS AND MOBILE PHONES ====================================== */
 @media screen and (max-width: 992px) {
