add a js for the post modal open close functionality

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -648,7 +648,7 @@ main .container .right {
     display: grid;
     place-items: center;
     font-size: 0.9rem;
-    /* display: none; */
+    display: none;
 }
 
 .post-modal .card {
